Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-32245

Crash in spdlog::logger::flush() on data node while running GSI test

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.5.0
    • 6.5.0
    • couchbase-bucket
    • 6.5.0-1715
    • Untriaged
    • Yes

    Description

      Build 6.5.0-1715

      Observed crash on data node while running GSI test.

      Note that only one test shown this crash none of other tests had this issue.

      Job- http://perf.jenkins.couchbase.com/job/secondary-plasma-dgm/1588 

      Logs- https://s3-us-west-2.amazonaws.com/perf-artifacts/jenkins-secondary-plasma-dgm-1588/172.23.97.5.zip

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mahesh.mandhare Mahesh Mandhare (Inactive)
              mahesh.mandhare Mahesh Mandhare (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty